--- a/styles.css
+++ b/styles.css
@@ -314,9 +314,11 @@ h1 {
 /* Responsive Design */
 @media (max-width: 768px) {
     .container {
-        display: block;
-        /* flex-direction: column; */
-        /* text-align: center; */
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+        text-align: center;
     }
 
     .left-content {
@@ -332,10 +334,9 @@ h1 {
     }
 
     #demoVideo {
-        width: 90%; 
+        width: 100%; 
         height: 80vh; 
-        /* border-radius: 20px; */
-        margin-right: 3rem;
+        border-radius: 20px;
     }
 
     .features {
